# ez_encrypt

./: .gitignore  LICENSE  Procfile  README.md
client/: Cargo.toml  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
client/app/: app.css  app.tsx
client/app/components/clipboard/: index.tsx
client/app/components/form/: const.ts  index.tsx  state.ts
client/public/: index.html
client/src/: lib.rs
client/src/crypto/: error.rs  mod.rs  test.rs  util.rs
server/: .env-example  .gitignore  Cargo.toml
server/src/: main.rs
