[package]
name = "ez_encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
blowfish = { version = "0.9", features = ["bcrypt"] }
generic-array = "0.14.5"
js-sys = "0.3"
wasm-bindgen = "0.2"
